--- a/msg.html
+++ b/msg.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>new one</title>
+<title>飞燕传信 MSG</title>
 <link rel="stylesheet" type="text/css" href="Puc/css/ui.css">
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="Puc/css/dist/css/swiper.min.css">
@@ -23,13 +23,13 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Birds.ren</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
       </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse inav" id="defaultNavbar1">
       <ul class="nav navbar-nav">
 
-				<li ><a href="/default.html">新品NEW</a></li>
+				<li ><a href="/index.html">新品NEW</a></li>
                        
 				<li class="cur"><a href="#">联系MSG</a></li>
 
