--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
     
     <img src="Puc/images/ban/a2.gif" alt="" width="100%">
 	</div>
+	
   </div> 
-Wanna inquiry Redirect to MSG Page Pls.
+
   </div>
 
 
@@ -118,7 +119,7 @@ Wanna inquiry Redirect to MSG Page Pls.
   <hr>
   <div class="row">
     <div class="text-center col-md-8 col-md-offset-1">
-      	<div class="footers"> birds.ren @ 2016
+      	<div class="footers"> Wanna inquiry Redirect to MSG Page Please!!!<br/>birds.ren @ 2016
 		</div>
     </div>
   </div>
